// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagFormDialogEdit Dialog Opened Renders the component 1`] = `
<fragment-stub>
  <div class="v-list-item__icon mr-0"><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--left mdi mdi-tag theme--light"></i></div>
  <div class="v-list-item__content">
    <div data-test="edit-title" class="v-list-item__title text-left">Edit</div>
  </div>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`TagFormDialogEdit Dialog closed Renders the component 1`] = `
<fragment-stub>
  <div class="v-list-item__icon mr-0"><i aria-hidden="true" data-test="edit-icon" class="v-icon notranslate v-icon--left mdi mdi-tag theme--light"></i></div>
  <div class="v-list-item__content">
    <div data-test="edit-title" class="v-list-item__title text-left">Edit</div>
  </div>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;
